@@ -1,12 +1,15 @@
+package managers;
+
 import history.HistoryManager;
 import manager.Managers;
 import manager.TaskManager;
 import model.Status;
 import model.Task;
-import model.TaskType;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.List;
 
 class ManagersTest {
@@ -15,7 +18,7 @@ class ManagersTest {
     void shouldCreateCorrectTaskManagerReadyForWork() {
         TaskManager taskManager = Managers.getDefault();
         Assertions.assertNotNull(taskManager, "Экземпляр manager.TaskManager не должен быть null");
-        Task otherTask = new Task("na", "desc", Status.NEW, TaskType.TASK);
+        Task otherTask = new Task("na", "desc", Status.NEW, LocalDateTime.MIN, Duration.ZERO);
 
         int taskId = taskManager.addNewTask(otherTask);
         Task savedTask = taskManager.getTaskById(taskId);
@@ -27,10 +30,10 @@ class ManagersTest {
     void shouldCreateCorrectHistoryManagerReadyForWork() {
         HistoryManager historyManager = Managers.getDefaultHistory();
         Assertions.assertNotNull(historyManager, "Экземпляр history.HistoryManager не должен быть null");
-        Task otherTask = new Task("na", "desc", Status.NEW, TaskType.TASK);
+        Task otherTask = new Task("na", "desc", Status.NEW, LocalDateTime.MIN, Duration.ZERO);
         historyManager.add(otherTask);
         List<Task> history = historyManager.getHistory();
         Assertions.assertNotNull(history, "История не должна быть пустой");
-        Assertions.assertEquals(otherTask, history.get(0), "Добавленная задача должна совпадать с сохранённой в истории");
+        Assertions.assertEquals(otherTask, history.getFirst(), "Добавленная задача должна совпадать с сохранённой в истории");
     }
 }
